--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/restrict-page.njk
 permalink: /{{ paged.url }}index.html
-title: The Weeding of Rima and Ilma
+title: The Weeding of Rima and Ilman
 renderData:
     title: "{{ paged.title }}"
     description: "{{ paged.description }}"
