--- a/src/scss/feeds/favorites-spots-pontianak.scss
+++ b/src/scss/feeds/favorites-spots-pontianak.scss
@@ -46,7 +46,7 @@
     }
 }
 
-.dragme {
+.dragme, .dragstory {
     cursor: move;
 }
 
@@ -101,6 +101,61 @@
     img {
         position: absolute;
     }
+}
+
+#spot-story {
+    width: 540px;
+    background-color: #f3f1ed;
+    border: 2px solid #0251a8;
+    padding: 1em;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    bottom: 5em;
+    left: 10em;
+    --repel-vertical-alignment: baseline;
+
+    .circle-dot {
+        width: 45px;
+        height: 45px;
+        background-color: #0251a8;
+        border-radius: 2em;
+    }
+
+    #story-stick {
+        width: 80px;
+        height: 500px;
+        margin-right: 1em;
+        color: #0251a8;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        #experience__stick {
+            border-bottom: 1px solid #0251a8;
+            padding-bottom: 2em;
+        }
+
+        #favorite__stick {
+            border-bottom: 1px solid #0251a8;
+            padding-bottom: 2em;
+        }
+
+    }
+
+    #story-row {
+        width: 300px;
+        border-left: 1px solid #0251a8;
+
+        h3 {
+            color: #0251a8;
+            padding-bottom: 1em;
+            border-bottom: 1px solid #0251a8;
+            font-weight: 400;
+            padding: 1em;
+        }
+    }
+
 }
 
 #bill-table {
@@ -159,6 +214,7 @@
 
     h2 {
         color: #0251a8;
+        font-weight:400;
     }
 }
 
