playing with absolute

--- a/src/site/content/feeds/favorite-spots-pontianak.njk
+++ b/src/site/content/feeds/favorite-spots-pontianak.njk
@@ -15,11 +15,11 @@ tags:
 <div id="favorite-spot-ptk">
     <div id="inner-spot">
     <div id="spot-right">
-        <drag-move targetName="dragme">
+            <drag-move targetName="dragcover">
             <div id="spot-box">
-                <img class="dragme" id="spot-cover" src="/images/feeds/bridge-pontianak.jpg" />
+                <img class="dragcover" id="spot-cover" src="/images/feeds/bridge-pontianak.jpg" />
             </div>
-        </drag-move>
+            </drag-move>
     </div>
     <div id="spot-left">
         <div class="big-size-spot region">
@@ -102,8 +102,7 @@ tags:
         </div>
         </div>
     </div>
-    <drag-move targetName="dragstory">
-    <div id="spot-story" class="dragstory repel w-stack">
+    <div id="spot-story" class="repel w-stack">
         <div id="story-stick">
             <div>
                 <div class="circle-dot"></div>
@@ -127,6 +126,5 @@ tags:
             </div>
         </div>
     </div>
-    </drag-move>
     </div>
 </div>
