--- a/src/scss/feeds/favorites-spots-pontianak.scss
+++ b/src/scss/feeds/favorites-spots-pontianak.scss
@@ -110,9 +110,9 @@
     padding: 1em;
     display: flex;
     flex-direction: row;
-    position: relative;
-    bottom: 5em;
-    left: 10em;
+    position: absolute;
+    top: 6em;
+    left: 30em;
     --repel-vertical-alignment: baseline;
 
     .circle-dot {
@@ -197,11 +197,11 @@
 
 .spot-foot {
     float: right;
-    font-weight: 400;
     text-align: right;
     
 
     h2 {
+        font-weight: 400;
         border-bottom: 1px solid #0251a8;
     }
 }
