navigation-drawer really tricky

--- a/src/scss/kurva.scss
+++ b/src/scss/kurva.scss
@@ -201,6 +201,7 @@ pre > code {
 @import 'blocks/site-header';
 
 @import 'web-components/kurva-tabs';
+@import 'web-components/web-navigation-drawer';
 
 @import 'pages/akses-page';
 @import 'pages/source-page';
