tabbing index for ucapan form

--- a/src/site/_includes/partials/ucapan-form.njk
+++ b/src/site/_includes/partials/ucapan-form.njk
@@ -1,7 +1,7 @@
 
 <ucapan-box>
 <div class="wrapper">
-    <h2 class="ucapin__messag gap-top-size-1">Kartu Ucapan</h2>
+    <h2 class="ucapin__message gap-top-size-1">Kartu Ucapan</h2>
     <form class="flow gap-top-size-1" method="post">
         <div>
             <label class="visually-hidden" for="sub-firstname">Tulis nama</label>
@@ -9,8 +9,8 @@
             type="text" />
         </div>
         <div>
-            <label class="visually-hidden" for="sub-email">Tulis ucapan kamu:</label>
-            <textarea id="sub-greeting" name="Greeting" placeholder="Tulis isi ucapan kamu" autocorrect="off" minlength="10" cols="30" rows="5"></textarea>
+            <label class="visually-hidden" for="sub-greeting">Tulis ucapan kamu:</label>
+            <textarea tabindex="0" id="sub-greeting" name="Greeting" placeholder="Tulis isi ucapan kamu" autocorrect="off" minlength="10" cols="30" rows="5"></textarea>
         </div>
         <div class="gap-top-size-2">
         <div class="ucapin__error hidden-yes">
@@ -18,11 +18,10 @@
             <p class="ucapin__error__message"></p>
           {# {% endAside %} #}
         </div>
-        {# <noscript>{% Aside 'warning' %}{{ 'i18n.subscribe.no_javascript' | i18n(locale) }}{% endAside %}</noscript> #}
       </div>
         <div id="button-hidden" class="all-center gap-top-size-1">
             <div>
-                <button class="send-button" type="submit">
+                <button class="send-button" type="submit" tabindex="2">
                     Kirim
                 </button>
             </div>
