--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -28,6 +28,7 @@ $gorko-config: (
     'property': 'padding-inline',
   ),
   'breakpoints': (
+    'se': '(max-width: 320px)',
     'xs': '(max-width: 25em)',
     'md': '(min-width: 50em)',
     'lg': '(min-width: 80em)',
