--- a/src/scss/pages/feeds/_undangan-digital.scss
+++ b/src/scss/pages/feeds/_undangan-digital.scss
@@ -3,9 +3,22 @@
 .invite {
 
     web-navigation-drawer > * {
-        color: white;
+        color: rgb(247, 195, 87);
         width: 100%;
         height: 100%;
+        background-color: rgb(0 0 0 / 80%);
+        
+        h2 {
+            font-family: Cormorant, 'Times New Roman', Times, serif;
+        }
+
+        #black-overlay {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(0 0 0 / 60%);
+            margin: 0;
+        }
     
         #open-invitation {
             width: 200px;
@@ -14,6 +27,14 @@
             border-radius: 1rem;
             margin-top: 3em;
             background-color: rgb(247, 195, 87);
+
+            button {
+                color: black;
+            }
+        }
+
+        #invite-box {
+            z-index: 400;
         }
     }
 }
@@ -78,14 +99,17 @@
 	}
 }
 
+.tag {
+    opacity: 0;
+}
 
 .tag.visible {
     opacity: 1;
-    // animation-name: fadeInOpacity;
+    animation-name: fadeInOpacity;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in-out;
 	animation-duration: 1s;
-    // transform: translate(0, 0);
+    transform: translate(0, 0);
   }
 
 #undangan-intro {
@@ -115,7 +139,7 @@
     line-height: 1.5rem;
 
     #salam-cover {
-        max-width: 360px;
+        max-width: 300px;
     }
 }
 
@@ -180,7 +204,6 @@
     margin-block-start: get-space('base');
     gap: $global-gutter;
 }
-
 
 
 @include media-query('md') {
@@ -323,7 +346,7 @@
     flex-wrap: nowrap;
     margin-inline: unset;
     img {
-        max-width: 150px;
+        max-width: 120px;
     }
 
     #reverse {
