--- a/src/site/_includes/partials/ucapan-form.njk
+++ b/src/site/_includes/partials/ucapan-form.njk
@@ -10,7 +10,7 @@
         </div>
         <div>
             <label class="visually-hidden" for="sub-greeting">Tulis ucapan kamu:</label>
-            <textarea tabindex="0" id="sub-greeting" name="Greeting" placeholder="Tulis isi ucapan kamu" autocorrect="off" minlength="10" cols="30" rows="5"></textarea>
+            <textarea tabindex="0" id="sub-greeting" name="Greeting" placeholder="Tulis isi ucapan kamu" autocorrect="off" minlength="10" cols="30" rows="5" required></textarea>
         </div>
         <div class="gap-top-size-2">
         <div class="ucapin__error hidden-yes">
@@ -21,7 +21,7 @@
       </div>
         <div id="button-hidden" class="all-center gap-top-size-1">
             <div>
-                <button class="send-button" type="submit" tabindex="2">
+                <button class="send-button" type="submit">
                     Kirim
                 </button>
             </div>
