--- a/src/scss/pages/feeds/_undangan-digital.scss
+++ b/src/scss/pages/feeds/_undangan-digital.scss
@@ -84,6 +84,20 @@
 
     --region-space: 1em;
 
+    #gallery-couple {
+        scroll-snap-type: x mandatory;
+        overflow-x: scroll;
+        display: flex;
+        align-items: baseline;
+      }
+      
+      #gallery-couple img {
+         scroll-snap-align: center;
+         max-height: 300px;
+         object-fit: cover;
+         border-radius: 1rem;
+      }
+
     #couple-name {
         margin-top: 1em;
         margin-bottom: 1em;
@@ -117,10 +131,6 @@
     h1 {
         font-size: 42px;
         font-weight: 700;
-    }
-
-    img {
-        max-height: 180px;
     }
 }
 
