--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -2,6 +2,7 @@
 layout: layouts/restrict-page.njk
 permalink: /{{ paged.url }}index.html
 title: The Weeding of Rima and Ilman
+thumbnail: '/images/feeds/padang.JPG'
 renderData:
     title: "{{ paged.title }}"
     description: "{{ paged.description }}"
@@ -17,13 +18,16 @@ pagination:
 
 {% include "partials/transition-scroll.njk" %}
 
+<audio id="bg-sound" class="audio__element" src="/audio/kim-loveable.mp3"></audio>
+
 <div class="invite">
 <web-navigation-drawer type="standard">
     <div data-drawer-container class="all-center w-stack">
         <div id="undangan-background">
-            <img alt="Padang Background" src="/images/feeds/padang.JPG"></img>
+            <img alt="Padang Background" src="/images/rm/cover-1.jpg"></img>
         </div>
         <div id="black-overlay">
+            
         </div>
         <div class="region gap-top-size-4" id="invite-box">
             <h2>Yang terhormat</h2>
@@ -39,7 +43,12 @@ pagination:
 </div>
 <div id="undangan-page">
     <div id="undangan-intro" class="region wrapper all-center w-stack">
-        <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img>
+        {# <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img> #}
+        <div id="gallery-couple">
+            <img src="/images/rm/cover-3.jpg">
+            <img src="/images/rm/cover-2.jpg">
+            <img src="/images/rm/cover-1.jpg">
+        </div>3
         <h1 id="couple-name">Rima & Ilman</h1>
     </div>
     <div id="undangan-speech" class="wrapper all-center">
@@ -49,7 +58,7 @@ pagination:
             Ya Allah, perkenankanlah kami merangkaikan kasih sayang yang
             kau ciptakan diantara kami untuk mengikuti Sunnah Rasul-Mu dalam
             rangka membentuk keluarga yang sakinah, mawaddah, warahmah.</p>
-        <img alt="Small Flower" src="/images/feeds/small-flower.png"></img>
+        {# <img alt="Small Flower" src="/images/feeds/small-flower.png"></img> #}
         <p>Kami bermaksud untuk menyelenggarakan acara pernikahan kami
                 dan kami ingin anda menjadi bagian dari hari istimewa kami</p>
         </div>
@@ -100,7 +109,7 @@ pagination:
         <div class="sidebar region" data-direction="rtl">
         <div class="flow">
             <h1>Ilman Nur Syamsudin, S.P</h1>
-            <p>Putra dari Bapak - Ibu<p>
+            <p>Putra dari Alm. Drs. Dicky Ahmaf Haidir dan Enung Nurani<p>
         </div>
         <div class="photo-placeholder">
             <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
@@ -114,23 +123,23 @@ pagination:
         <h3>Rangkaian Acara akan diselenggarakan pada:</h3>
         <div id="undangan-date" class="repel region">
             <h1 id="date-day">Minggu</h1>
-            <h1 id="date-month">25 Agustus</h1>
+            <h1 id="date-month">7 Agustus</h1>
             <h1 id="date-year">2022</h1>
         </div>
         <div id="akad-nikah" class="region w-stack tag">
             <h1>Akad Nikah</h1>
             <div class="weeding-date all-center w-stack">
                 <img alt="Calendar Icon" src="/images/feeds/calendar-icon.png"></img>
-                <h3 class="event-value">Minggu, 25 Agustus 2022</h3>
+                <h3 class="event-value">Minggu, 7 Agustus 2022</h3>
                 <h3>Pukul 07.00 WIB</h3>
             </div>
             <div class="weeding-location all-center">
                 <img alt="Location Icon" src="/images/feeds/location-icon.png"></img>
                 <h3 class="event-value">Lokasi Acara</h3>
-                <h3>Jl. Batununggal, Kab. Bandung, Jawa Barat</h3>
+                <h3>Selera Riau Bandung Hotel</h3>
             </div>
         </div>
-        <div id="resepsi-nikah" class="region w-stack tag">
+        {# <div id="resepsi-nikah" class="region w-stack tag">
             <h1>Resepsi</h1>
             <div class="weeding-date all-center w-stack">
                 <img alt="Calendar Icon" src="/images/feeds/calendar-icon.png"></img>
@@ -142,13 +151,13 @@ pagination:
                 <h3 class="event-value">Lokasi Acara</h3>
                 <h3>Jl. Batununggal, Kab. Bandung, Jawa Barat</h3>
             </div>
-        </div>
+        </div> #}
     </div>
     <div id="undangan-greets" class="wrapper all-center region tag">
-        <div class="flower-frame repel">
+        {# <div class="flower-frame repel">
             <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
             <img alt="Bunga Frame Right" src="/images/feeds/bunga-frame.png"></img>
-        </div>
+        </div> #}
         <div class="w-stack--sm tag">
             <h1>Kirim Ucapan</h1>
             <p>"Dan Diantara tanda-tanda kebesaran-Nya ialah diciptakan-Nya untukmu pasangan hidup dari jenismu sendiri supaya kamu mendapatkan ketenangan hati
@@ -159,21 +168,19 @@ pagination:
                 {% include "partials/ucapan-form.njk" %}
                 <ucapan-list></ucapan-list>
             </div>
-            <p>Jika memberi adalah ungkapan tanda kasih anda, Anda dapat memberi kado secara cashless dengan mengirim amplop digital secara transfer pada akun di bawah ini :</p>
-            <h2>Rekening a/n Name</h2>
         </div>
     </div>
     <div id="undangan-footer" class="wrapper all-center w-stack region tag">
-        <img alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img>
+        {# <img alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img> #}
         <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan Terima Kasih</h3>
         <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
         <h3>KAMI YANG BERBAHAGIA</h3>
         <h1>Rima & Ilman</h1>
         {# Side Flower Image #}
-        <div class="flower-frame repel">
+        {# <div class="flower-frame repel">
             <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
             <img alt="Bunga Frame Right" src="/images/feeds/bunga-frame.png"></img>
-        </div>
+        </div> #}
     </div>
 </div>
 </main>
