fix title deescription meta

--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -2,7 +2,8 @@
 layout: layouts/restrict-page.njk
 permalink: /{{ paged.url }}index.html
 title: The Weeding of Rima and Ilman
-thumbnail: '/images/feeds/padang.JPG'
+thumbnail: 'https://kurva.xyz/images/rm/cover-5-og.jpg'
+alt: Picture of The Weeding of Rima and Ilman
 renderData:
     title: "{{ paged.title }}"
     description: "{{ paged.description }}"
@@ -180,6 +181,7 @@ pagination:
         <div id="gallery-couple">
             <img src="/images/rm/cover-3.jpg">
             <img src="/images/rm/cover-2.jpg">
+            <img src="/images/rm/cover-4.jpg">
             <img src="/images/rm/cover-1.jpg">
         </div>
         <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan Terima Kasih</h3>
