testing the preload

--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -19,7 +19,7 @@ pagination:
 
 {% include "partials/transition-scroll.njk" %}
 
-<audio id="bg-sound" class="audio__element" src="{{ helpers.hashForProd('/audio/nothing-gonna-change-my-love.mp3') }}" autoplay></audio>
+<audio id="bg-sound" class="audio__element" src="{{ helpers.hashForProd('/audio/nothing-gonna-change-my-love.mp3') }}" autoplay preload></audio>
 
 <div class="invite">
 <web-navigation-drawer type="standard">
